WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
189520
[Curl] Limit capturing extra metrics for Web Inspector when not required.
https://bugs.webkit.org/show_bug.cgi?id=189520
Summary
[Curl] Limit capturing extra metrics for Web Inspector when not required.
Basuke Suzuki
Reported
2018-09-11 14:05:27 PDT
Respect the value of NetworkDataTask::shouldCaptureExtraNetworkLoadMetrics() to reduce the process time when they are not needed.
Attachments
PATCH
(10.02 KB, patch)
2018-09-17 10:50 PDT
,
Basuke Suzuki
achristensen
: review-
Details
Formatted Diff
Diff
PATCH
(12.99 KB, patch)
2018-09-17 15:54 PDT
,
Basuke Suzuki
achristensen
: review+
Details
Formatted Diff
Diff
PATCH
(13.10 KB, patch)
2018-09-18 14:13 PDT
,
Basuke Suzuki
no flags
Details
Formatted Diff
Diff
Show Obsolete
(2)
View All
Add attachment
proposed patch, testcase, etc.
Basuke Suzuki
Comment 1
2018-09-17 10:50:41 PDT
Created
attachment 349903
[details]
PATCH
Alex Christensen
Comment 2
2018-09-17 13:47:35 PDT
Comment on
attachment 349903
[details]
PATCH View in context:
https://bugs.webkit.org/attachment.cgi?id=349903&action=review
> Source/WebKit/NetworkProcess/curl/NetworkDataTaskCurl.cpp:140 > + auto curlRequest = CurlRequest::create(request, *this, CurlRequest::ShouldSuspend::Yes); > + curlRequest->setCaptureExtraNetworkLoadMetricsEnabled(shouldCaptureExtraNetworkLoadMetrics());
This should be a constructor parameter. If it's annoying use a default value.
Basuke Suzuki
Comment 3
2018-09-17 15:54:01 PDT
Created
attachment 349959
[details]
PATCH Thanks for the review. I remove setter and move that to the constructor argument.
Alex Christensen
Comment 4
2018-09-17 16:09:40 PDT
Comment on
attachment 349959
[details]
PATCH View in context:
https://bugs.webkit.org/attachment.cgi?id=349959&action=review
> Source/WebCore/platform/network/curl/CurlRequest.h:112 > + CurlRequest(const ResourceRequest&, CurlRequestClient*, bool shouldSuspend, bool enableMultipart, bool captureExtendedMetrics, MessageQueue<Function<void()>>*);
It would be more readable to just pass the enums here, too.
Basuke Suzuki
Comment 5
2018-09-18 14:13:48 PDT
Created
attachment 350053
[details]
PATCH
Basuke Suzuki
Comment 6
2018-09-18 14:15:16 PDT
Comment on
attachment 350053
[details]
PATCH Sorry, I've submitted a different patch file. This one is the right one.
WebKit Commit Bot
Comment 7
2018-09-18 14:52:18 PDT
Comment on
attachment 350053
[details]
PATCH Clearing flags on attachment: 350053 Committed
r236156
: <
https://trac.webkit.org/changeset/236156
>
WebKit Commit Bot
Comment 8
2018-09-18 14:52:19 PDT
All reviewed patches have been landed. Closing bug.
Radar WebKit Bug Importer
Comment 9
2018-09-18 14:53:30 PDT
<
rdar://problem/44577426
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug