[Curl] Limit capturing extra metrics for Web Inspector when not required. https://bugs.webkit.org/show_bug.cgi?id=189520

Reviewed by Alex Christensen.

Respect the value of NetworkDataTask::shouldCaptureExtraNetworkLoadMetrics() to reduce the process
time when they are not needed.

Source/WebCore:

No new tests because there's no behavior change.

* platform/network/curl/CurlContext.cpp:
(WebCore::CurlHandle::getNetworkLoadMetrics):
(WebCore::CurlHandle::addExtraNetworkLoadMetrics):
* platform/network/curl/CurlContext.h:
* platform/network/curl/CurlRequest.cpp:
(WebCore::CurlRequest::CurlRequest):
(WebCore::CurlRequest::updateNetworkLoadMetrics):
* platform/network/curl/CurlRequest.h:
(WebCore::CurlRequest::create):
* platform/network/curl/ResourceHandleCurl.cpp:
(WebCore::ResourceHandle::createCurlRequest):

Source/WebKit:

* NetworkProcess/curl/NetworkDataTaskCurl.cpp:
(WebKit::NetworkDataTaskCurl::createCurlRequest):


Canonical link: https://commits.webkit.org/204678@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236156 268f45cc-cd09-0410-ab3c-d52691b4dbfc